# LightDance-ESP32-fork-

idf_project/components/connection_component/: CMakeLists.txt  connection_component.c
idf_project/components/connection_component/include/: connection_component.h
idf_project/components/parsing_component/: CMakeLists.txt  parsing_component.c
idf_project/components/parsing_component/include/: parsing_component.h
idf_project/main/: main.cpp
server_app/: handler.py  main.py  parser_utils.py  sender.py  utils.py
